@@ -5,6 +5,7 @@
 * Braintree: Update gem to latest version [curiousepic] #3091
 * Adyen: Pass arbitrary riskData fields [curiousepic] #3089
 * Worldpay: Fix cookie header name [curiousepic] #3099
+* Paymentez: Adds support for extra_params optional field [molbrown] #3095
 
 == Version 1.89.0 (December 17, 2018)
 * Worldpay: handle Visa and MasterCard payouts differently [bpollack] #3068
